# conan-openstudio-qt

./: CMakeLists.txt  README.md  main.cpp  main.qml
